IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
7/17/06: Stopped Bead fixer from recentering added or moved points in Zap
window, made up and down arrows in gap mode non-optional, made sure hot keys
only worked in the appropriate mode.

7/17/06: Labeled local area mean residual output from Tiltalign and provided
mean and range for all local areas.

7/17/06: Made reading and writing JPEG's in 3dmod available on the Mac.

7/14/06: Fixed mtk to transfer the power of a graph to the mean and SD graphs
from random shifting.

7/13/06: Made the default image format for non-TIFF snapshots be jpeg, except
on SGI.

7/13/06: Fixed bug in Solvematch that made it unable to use the transferfid
coordinates sometimes on a Mac.

7/11/06: Changed binvol to write in chunks so it will work with any size data.

7/11/06: IMOD_3-8-20
7/10/06: Changed "cut order" to "Z order" in join table; stacking sections in
reverse of cut order does not always preserve handedness.

7/10/06: Fixed problem in post-processing panel with blank entries in X/Y 
region to use for scaling.

7/8/06: IMOD_3-8-19
7/8/06: Increased array limits for extra header in Edmont, Newstack,
Extractpieces, Extracttilts.

7/8/06: Added ability to stretch around two fixed points in Midas, which
should make it easier to correct stretches.

7/5/06: IMOD_3-8-18 and IMOD_3-8-18_WKSHP
7/5/06: Fixed problem with buttons not working on tomogram position panel
after pressing done without doing final alignment.

7/4/06: IMOD_3-8-17 and IMOD_3-8-17_WKSHP
7/4/06: Fixed finishjoin problems with line endings on Windows (in 3.7).

7/3/06: Fixed running of Tiltalign from Bead Fixer on Windows (also broken by
new communication scheme) and switched to using Qt process instead of thread
to run it (no more flashing DOS window).

7/3/06: Fixed problem in Windows of 3dmod started from eTomo not really dying
when killed by user, due to new communication scheme.
