@@ -92,11 +92,13 @@ you can fill them if appropriate.
 <UL>
 <LI> Autocentering is available.
 <LI> Press the <B>Go to Next Gap</B> button or hit the space bar key to 
-move to the next gap or incomplete place in the model.  If 
-there is a gap, the point BEFORE the gap will be displayed.  
-If a contour does not start on the first section, the first 
-point in the contour (which is AFTER the gap) will be 
-displayed and a message will be printed.  
+move to the next gap or incomplete place in the model.  If there is a gap, the
+point BEFORE the gap will be displayed and a upward pointing arrow will be
+shown.  If a contour does not start on the first section, the first 
+point in the contour (which is AFTER the gap) will be displayed, a message
+will be printed, and a downward pointing arrow will be shown.  To get to the
+view with the missing point, press PageUp when the arrow points up and
+PageDown when it points down.
 <LI> Use the <B>Go to Previous Gap</B> button to go backwards to a
 previous gap.
 <LI> If you accidentally detach from the model point before the gap and lose
@@ -110,12 +112,8 @@ Press <B>Start from Beginning</B> to start the search at the
 beginning of the model again.  To start the search from a chosen
 place, make that point be the current point and press
 <B>Start from Current Point</B>.
-<LI> When <B>Show Direction Arrow</B> is on, the program will draw an
-arrow to represent the Z direction from the current point to the gap.
-To get to the view with the missing point, press PageUp when the arrow
-points up and PageDown when it points down.
 <LI> When you add a point at the beginning of a contour, the point will
-automatically become the first point of the contour, thus keep the 
+automatically become the first point of the contour, thus keeping the 
 contour points in order by Z.
 </UL>
 <P>
